added pdf parse notebook

--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import pandas as pd\n",
-    "#import numpy as np\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#import tabula\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tabula\n",
     "import dill\n",
     "\n",
     "#f = '/home/joe/data/covid19/20200307.pdf'\n",
@@ -23,23 +23,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N:  0\n",
+      "______________\n",
+      "N:  1\n",
+      "______________\n",
+      "N:  2\n",
+      "______________\n",
+      "N:  3\n",
+      "______________\n",
+      "N:  4\n",
+      "______________\n",
+      "N:  5\n",
+      "______________\n",
+      "N:  6\n",
+      "______________\n",
+      "N:  7\n",
+      "______________\n",
+      "N:  8\n",
+      "______________\n"
+     ]
     }
    ],
    "source": [
-    "nTables"
+    "i=0\n",
+    "while i < nTables:\n",
+    "    print(\"N: \", i)\n",
+    "    tables[i].info()\n",
+    "    print(tables[i])\n",
+    "    i += 1\n",
+    "    print(\"______________\")\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
