--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,63 +11,45 @@
     "import matplotlib.pyplot as plt\n",
     "import tabula\n",
     "import dill\n",
-    "\n",
-    "#f = '/home/joe/data/covid19/20200307.pdf'\n",
-    "\n",
-    "#tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
+    "import re\n",
+    "f = '/home/joe/data/covid19/20200307.pdf'\n",
+    "#df = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
     "#dill.dump_session('parsed.db')\n",
-    "dill.load_session('parsed.db')\n",
-    "\n",
-    "nTables = len(tables)"
+    "dill.load_session('parsed.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load findChina.py\n",
+    "def findChina(df):\n",
+    "    x = 'Province/' # id China with this\n",
+    "    y = 'Hubei'# id China with this\n",
+    "    for df in tables:\n",
+    "        if (x in df.columns.values):\n",
+    "            if (y in df[x].tolist()):\n",
+    "                print(re.split('\\\\s+',df['Cumulative'].iloc[-1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N:  0\n",
-      "______________\n",
-      "N:  1\n",
-      "______________\n",
-      "N:  2\n",
-      "______________\n",
-      "N:  3\n",
-      "______________\n",
-      "N:  4\n",
-      "______________\n",
-      "N:  5\n",
-      "______________\n",
-      "N:  6\n",
-      "______________\n",
-      "N:  7\n",
-      "______________\n",
-      "N:  8\n",
-      "______________\n"
+      "['80813', '3073']\n"
      ]
     }
    ],
    "source": [
-    "i=0\n",
-    "while i < nTables:\n",
-    "    print(\"N: \", i)\n",
-    "    tables[i].info()\n",
-    "    print(tables[i])\n",
-    "    i += 1\n",
-    "    print(\"______________\")\n",
-    "    "
+    "findChina(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
