--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -12,15 +14,54 @@
     "import tabula\n",
     "import dill\n",
     "import re\n",
-    "f = '/home/joe/data/covid19/20200307.pdf'\n",
-    "#df = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
-    "#dill.dump_session('parsed.db')\n",
-    "dill.load_session('parsed.db')"
+    "from os import listdir\n",
+    "from os.path import isfile, join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['20200307-sitrep-47-covid-19.pdf', '03-07-2020.pdf', '20200308-sitrep-48-covid-19.pdf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mypath = '/home/joe/data/covid19'\n",
+    "files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = '03-07-2020'\n",
+    "f = \"/home/joe/data/covid19/\" + date + \".pdf\"\n",
+    "#f = \"/home/joe/data/covid19/20200308-sitrep-48-covid-19.pdf\"\n",
+    "f = \"/home/joe/data/covid19/20200307-sitrep-47-covid-19.pdf\"\n",
+    "tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
+    "#dill.dump_session('parsed.db')\n",
+    "#dill.load_session('parsed.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
