--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -20,54 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2020-02-26.pdf', '2020-02-13.pdf', '2020-02-09.pdf', '2020-03-01.pdf', '2020-02-01.pdf', '2020-02-19.pdf', '2020-02-23.pdf', '2020-02-21.pdf', '2020-02-12.pdf', '2020-01-31.pdf', '2020-02-11.pdf', '2020-02-27.pdf', '2020-01-28.pdf', '2020-01-26.pdf', '2020-02-20.pdf', '2020-01-25.pdf', '2020-01-29.pdf', '2020-02-02.pdf', '2020-02-06.pdf', '2020-03-06.pdf', '2020-03-02.pdf', '2020-02-03.pdf', '2020-01-22.pdf', '2020-03-07.pdf', '2020-02-24.pdf', '2020-02-14.pdf', '2020-02-08.pdf', '2020-01-21.pdf', '2020-02-15.pdf', '2020-01-27.pdf', '2020-02-25.pdf', '2020-02-10.pdf', '2020-02-16.pdf', '2020-03-08.pdf', '2020-02-07.pdf', '2020-02-29.pdf', '2020-02-17.pdf', '2020-02-18.pdf', '2020-02-22.pdf', '2020-02-28.pdf', '2020-01-30.pdf', '2020-02-05.pdf', '2020-01-23.pdf', '2020-01-24.pdf', '2020-02-04.pdf', '2020-03-09.pdf', '2020-03-05.pdf', '2020-03-03.pdf', '2020-03-04.pdf']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mypath = '/home/joe/data/covid19/who'\n",
-    "files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
-    "print(files)"
+    "filelist = '/home/joe/datavisions/covid19/filelist'\n",
+    "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Got stderr: Mar 09, 2020 7:41:17 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
-      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "date = '2020-03-07'\n",
-    "f = \"/home/joe/data/covid19/who/\" + date + \".pdf\"\n",
-    "df = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
-    "#dill.dump_session('parsed.db')\n",
-    "#dill.load_session('parsed.db')"
+    "#dill.dump_session('data.db')\n",
+    "#dill.load_session('data.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load findChina.py\n",
-    "def findChina(df):\n",
+    "def findChina(tables):\n",
+    "# from the list of tables (dfs), find the one with china - return cumulative cases and deaths\n",
     "    x = 'Province/' # id China with this\n",
     "    y = 'Hubei'# id China with this\n",
     "    for df in tables:\n",
@@ -78,23 +58,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processFile(mypath,filelist):\n",
+    "# find pdfs in path\n",
+    "# if the file has not been processed, process it\n",
+    "\n",
+    "    # list of files in dir\n",
+    "    files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+    "    dfFiles = pd.DataFrame(files, columns = ['file'])\n",
+    "    print(dfFiles)\n",
+    "    \n",
+    "    # create df of done files\n",
+    "    doneFiles = open(filelist).read().splitlines()\n",
+    "    dfDone = pd.DataFrame(doneFiles, columns = ['file'])\n",
+    "    print(dfDone)\n",
+    "    \n",
+    "    dfm = pd.merge(dfDone, dfFiles, on=['file'], how='inner')\n",
+    "    print(\"yo\")\n",
+    "    print(dfm)\n",
+    "        \n",
+    "    # check if files in dir are in done files df\n",
+    "    for f in (files):\n",
+    "        f = join(mypath,f)\n",
+    " #       print(f)\n",
+    "        \n",
+    " #       print(filelist)\n",
+    "#tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-c8753713783d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfindChina\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             file\n",
+      "0  2020-03-09.pdf\n",
+      "1  2020-03-08.pdf\n",
+      "             file\n",
+      "0  2020-03-09.pdf\n",
+      "yo\n",
+      "             file\n",
+      "0  2020-03-09.pdf\n",
+      "1  2020-03-08.pdf\n"
      ]
     }
    ],
    "source": [
-    "findChina(df)"
+    "processFile(mypath,filelist)"
    ]
   }
  ],
