using isin rather than merge

--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,17 @@
     "    dfDone = pd.DataFrame(doneFiles, columns = ['file'])\n",
     "    print(dfDone)\n",
     "    \n",
-    "    dfm = pd.merge(dfDone, dfFiles, on=['file'], how='inner')\n",
-    "    print(\"yo\")\n",
-    "    print(dfm)\n",
+    "    x = dfFiles[dfFiles['file'].isin(dfDone['file'])]\n",
+    "    print(x)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "  #  dfm = pd.merge(dfDone, dfFiles, on=['file'], how='inner')\n",
+    "\n",
     "        \n",
     "    # check if files in dir are in done files df\n",
-    "    for f in (files):\n",
-    "        f = join(mypath,f)\n",
+    "  #  for f in (files):\n",
+    "  #      f = join(mypath,f)\n",
     " #       print(f)\n",
     "        \n",
     " #       print(filelist)\n",
@@ -91,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -103,10 +107,8 @@
       "1  2020-03-08.pdf\n",
       "             file\n",
       "0  2020-03-09.pdf\n",
-      "yo\n",
       "             file\n",
-      "0  2020-03-09.pdf\n",
-      "1  2020-03-08.pdf\n"
+      "0  2020-03-09.pdf\n"
      ]
     }
    ],
