--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -14,24 +14,25 @@
     "import tabula\n",
     "import dill\n",
     "import re\n",
+    "import sys\n",
     "from os import listdir\n",
     "from os.path import isfile, join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mypath = '/home/joe/data/covid19/who'\n",
-    "filelist = '/home/joe/datavisions/covid19/filelist'\n",
-    "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'"
+    "mypath = '/home/joe/data/covid19/who/test'\n",
+    "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'\n",
+    "filelist = '/home/joe/datavisions/covid19/filelist'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load findChina.py\n",
-    "def findChina(tables):\n",
-    "# from the list of tables (dfs), find the one with china - return cumulative cases and deaths\n",
-    "    x = 'Province/' # id China with this\n",
-    "    y = 'Hubei'# id China with this\n",
-    "    for df in tables:\n",
-    "        if (x in df.columns.values):\n",
-    "            if (y in df[x].tolist()):\n",
-    "                print(re.split('\\\\s+',df['Cumulative'].iloc[-1]))\n"
+    "def findFilesToProcess(mypath,filelist):\n",
+    "# find pdfs in path\n",
+    "# if the file has not been processed, process it\n",
+    "\n",
+    "    # list of files in dir\n",
+    "    files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+    "    dfFiles = pd.DataFrame(files, columns = ['file'])\n",
+    "    #print(dfFiles)\n",
+    "    \n",
+    "    # create df of done files\n",
+    "    doneFiles = open(filelist).read().splitlines()\n",
+    "    dfDone = pd.DataFrame(doneFiles, columns = ['file'])\n",
+    "    #print(dfDone)\n",
+    "    \n",
+    "    return dfFiles[dfFiles['file'].isin(dfDone['file']) == False]\n",
+    "    \n"
    ]
   },
   {
@@ -62,59 +70,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processFile(mypath,filelist):\n",
-    "# find pdfs in path\n",
-    "# if the file has not been processed, process it\n",
-    "\n",
-    "    # list of files in dir\n",
-    "    files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
-    "    dfFiles = pd.DataFrame(files, columns = ['file'])\n",
-    "    print(dfFiles)\n",
-    "    \n",
-    "    # create df of done files\n",
-    "    doneFiles = open(filelist).read().splitlines()\n",
-    "    dfDone = pd.DataFrame(doneFiles, columns = ['file'])\n",
-    "    print(dfDone)\n",
-    "    \n",
-    "    x = dfFiles[dfFiles['file'].isin(dfDone['file'])]\n",
-    "    print(x)\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "  #  dfm = pd.merge(dfDone, dfFiles, on=['file'], how='inner')\n",
-    "\n",
-    "        \n",
-    "    # check if files in dir are in done files df\n",
-    "  #  for f in (files):\n",
-    "  #      f = join(mypath,f)\n",
-    " #       print(f)\n",
-    "        \n",
-    " #       print(filelist)\n",
-    "#tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)"
+    "# %load findChina.py\n",
+    "def findChina(tables):\n",
+    "# from the list of tables (dfs), find the one with china - return cumulative cases and deaths\n",
+    "    x = 'Province/' # id China with this\n",
+    "    y = 'Hubei'# id China with this\n",
+    "    output = ['N/A','N/A']\n",
+    "    for df in tables:\n",
+    "        if (x in df.columns.values):\n",
+    "            if (y in df[x].tolist()):\n",
+    "                output = re.split('\\\\s+',df['Cumulative'].iloc[-1])\n",
+    "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsePdf(f):\n",
+    "    \n",
+    "    tables = tabula.read_pdf(f, pages = \"all\", multiple_tables = True)\n",
+    "    chinaNumbers = findChina(tables)\n",
+    "        \n",
+    "    return chinaNumbers\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processFile(mypath,filelist,f):\n",
+    "    date, ext = f.split('.')\n",
+    "    ffile = '/'.join([mypath,f])\n",
+    "\n",
+    "    try:\n",
+    "        fl = open(filelist,\"a+\")\n",
+    "    except OSError:\n",
+    "        print(\"could not open file to append \", filelist)\n",
+    "        sys.exit()\n",
+    "    \n",
+    "    chinaNumbers = parsePdf(ffile)\n",
+    "\n",
+    "    try:\n",
+    "        fl.close()\n",
+    "    except OSError:\n",
+    "        print(\"could not close file list \", filelist)\n",
+    "        sys.exit()\n",
+    "        \n",
+    "    chinaNumbers.insert(0,'china')\n",
+    "    chinaNumbers.insert(0,date)\n",
+    "    \n",
+    "    return chinaNumbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "             file\n",
-      "0  2020-03-09.pdf\n",
-      "1  2020-03-08.pdf\n",
-      "             file\n",
-      "0  2020-03-09.pdf\n",
-      "             file\n",
-      "0  2020-03-09.pdf\n"
+      "Got stderr: Mar 10, 2020 4:14:40 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "insert() takes exactly 2 arguments (3 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-110-5e42ae47166c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#print(f)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrows\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#there are files to process, process the first file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocessFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfilelist\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdfToProcess\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'file'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-109-b35e8ccdd6a1>\u001b[0m in \u001b[0;36mprocessFile\u001b[0;34m(mypath, filelist, f)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mchinaNumbers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'china'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchinaNumbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: insert() takes exactly 2 arguments (3 given)"
      ]
     }
    ],
    "source": [
-    "processFile(mypath,filelist)"
+    "dfToProcess = findFilesToProcess(mypath,filelist)\n",
+    "rows, columns = dfToProcess.shape\n",
+    "#f = dfToProcess['file'].iloc[0]\n",
+    "#print(f)\n",
+    "if (rows > 0): #there are files to process, process the first file\n",
+    "    out = processFile(mypath,filelist,dfToProcess['file'].iloc[0])\n",
+    "    print(out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
