iterated through china initially

--- a/covid19/covid.ipynb
+++ b/covid19/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 149,
    "metadata": {
     "scrolled": true
    },
@@ -15,19 +15,21 @@
     "import dill\n",
     "import re\n",
     "import sys\n",
+    "import csv\n",
     "from os import listdir\n",
     "from os.path import isfile, join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "mypath = '/home/joe/data/covid19/who/test'\n",
     "#mypath = '/run/user/1000/gvfs/smb-share:server=majesty.local,share=filesjoe/data/who_covid19_reports/renamed'\n",
-    "filelist = '/home/joe/datavisions/covid19/filelist'\n"
+    "filelist = '/home/joe/datavisions/covid19/filelist'\n",
+    "summary = '/home/joe/data/covid19/summary'\n"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,26 +102,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processFile(mypath,filelist,f):\n",
+    "def processFile(mypath,filelist,summary,f):\n",
     "    date, ext = f.split('.')\n",
     "    ffile = '/'.join([mypath,f])\n",
     "\n",
     "    try:\n",
     "        fl = open(filelist,\"a+\")\n",
     "    except OSError:\n",
-    "        print(\"could not open file to append \", filelist)\n",
+    "        print(\"could not open filelist to append \", filelist)\n",
+    "        sys.exit()\n",
+    "        \n",
+    "    try:\n",
+    "        summary = open(summary,\"a+\")\n",
+    "    except OSError:\n",
+    "        print(\"could not open summary to append \", summary)\n",
     "        sys.exit()\n",
     "    \n",
     "    chinaNumbers = parsePdf(ffile)\n",
+    "    chinaNumbers.insert(0,'china')\n",
+    "    chinaNumbers.insert(0,date)\n",
+    "    chinaVals = \",\".join(str(x) for x in chinaNumbers)\n",
+    "    \n",
+    "    try:\n",
+    "        summary.write(chinaVals + \"\\n\")\n",
+    "    except OSError:\n",
+    "        print(\"could not append \", summary)\n",
+    "        sys.exit()\n",
     "\n",
     "    try:\n",
     "        fl.write(f + \"\\n\")\n",
     "    except OSError:\n",
     "        print(\"could not append \", filelist)\n",
+    "        sys.exit()\n",
+    "        \n",
+    "    try:\n",
+    "        summary.close()\n",
+    "    except OSError:\n",
+    "        print(\"could not close summary \", summary)\n",
     "        sys.exit()\n",
     "\n",
     "    try:\n",
@@ -128,29 +151,69 @@
     "        print(\"could not close file list \", filelist)\n",
     "        sys.exit()\n",
     "        \n",
-    "    chinaNumbers.insert(0,'china')\n",
-    "    chinaNumbers.insert(0,date)\n",
-    "    \n",
-    "    return chinaNumbers"
+    "    return chinaVals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 158,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found to process:  2020-03-09.pdf\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Got stderr: Mar 10, 2020 4:19:33 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Got stderr: Mar 10, 2020 4:47:54 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Mar 10, 2020 4:19:34 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
-      "Mar 10, 2020 4:19:34 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
+      "Mar 10, 2020 4:47:55 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:56 PM org.apache.pdfbox.pdmodel.font.PDTrueTypeFont <init>\n",
       "WARNING: Using fallback font 'LiberationSans' for 'TimesNewRomanPSMT'\n",
+      "Mar 10, 2020 4:47:56 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font Arial-BoldMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:58 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:58 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDGEE+Calibri-Bold are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:47:59 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font ArialMT are not implemented in PDFBox and will be ignored\n",
+      "Mar 10, 2020 4:48:00 PM org.apache.pdfbox.pdmodel.font.PDCIDFontType2 <init>\n",
+      "INFO: OpenType Layout tables used in font BCDHEE+Calibri are not implemented in PDFBox and will be ignored\n",
       "\n"
      ]
     },
@@ -158,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2020-03-06', 'china', '80711', '3045']\n"
+      "output:  2020-03-09,china,N/A,N/A\n"
      ]
     }
    ],
@@ -168,8 +231,10 @@
     "#f = dfToProcess['file'].iloc[0]\n",
     "#print(f)\n",
     "if (rows > 0): #there are files to process, process the first file\n",
-    "    out = processFile(mypath,filelist,dfToProcess['file'].iloc[0])\n",
-    "    print(out)"
+    "    f = dfToProcess['file'].iloc[0]\n",
+    "    print(\"found to process: \", f)\n",
+    "    out = processFile(mypath,filelist,summary,f)\n",
+    "    print(\"output: \", out)\n"
    ]
   },
   {
